# aime2bngrw

./: README.txt  aime2bngrw_example.ini  compile.bat  meson.build
aime2bngrw/: aime.c  aime.h  aime2bngrw.c  aime2bngrw.h  bngrw.c  bngrw.h  config.c  config.h  exports.def  meson.build
aime2bngrw/util/: dprintf.c  dump.c
api/: api.c  api.h  meson.build
subprojects/: aimelib.wrap
